--- a/index.html
+++ b/index.html
@@ -1,54 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tutorial 1</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    </head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <h1>Series</h1>
-                <img src="https://res.cloudinary.com/teepublic/image/private/s--ngYnda_X--/c_fit,g_north_west,h_708,w_840/co_000000,e_outline:40/co_000000,e_outline:inner_fill:1/co_ffffff,e_outline:40/co_ffffff,e_outline:inner_fill:1/co_bbbbbb,e_outline:3:1000/c_mpad,g_center,h_1260,w_1260/b_rgb:eeeeee/c_limit,f_jpg,h_630,q_90,w_630/v1588864110/production/designs/9898897_0.jpg" height="300px" width="300px" alt="Avatar" alt="Avatar"> 
-            <div class="col">
-                <h2>Series </h2>
-                <form style="margin:5px;">
-                    <div class="form-row">
-                      <div class="col">
-                          <input type="text" class="form-control" id="search-box" placeholder="Filtrar por nombre">
-                      </div>
-                      <div class="col">
-                          <button type="button" id="button-filterByName" class="btn btn-success">Aplicar</button>
-                      </div>
-                    </div>
-                </form>
-                <table class="table">
-                <thead class="thead-dark">
-                     <tr>
-                        <th>#</th>
-                        <th>Nombre</th>
-                        <th>Plataforma</th>
-                        <th>Temporadas</th>
-                        <th>Descripcion</th>
-                        <th>Link</th>
-                        <th>Imagen</th>
 
-                    </tr>
-                    <tfoot>
-                        <tr>
-                          <td colspan="4">Temporadas promedio: 6</td>
-                        </tr>
-                    </tbody>
-                </thead>
-                <tbody id="series">
-                </tbody>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Tutorial 1</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+</head>
+
+<body>
+  <div class="containerHead">
+    <div class="row">
+      <h1>Series</h1>
+      <img
+        src="https://res.cloudinary.com/teepublic/image/private/s--ngYnda_X--/c_fit,g_north_west,h_708,w_840/co_000000,e_outline:40/co_000000,e_outline:inner_fill:1/co_ffffff,e_outline:40/co_ffffff,e_outline:inner_fill:1/co_bbbbbb,e_outline:3:1000/c_mpad,g_center,h_1260,w_1260/b_rgb:eeeeee/c_limit,f_jpg,h_630,q_90,w_630/v1588864110/production/designs/9898897_0.jpg"
+        height="300px" width="300px" alt="Avatar" alt="Avatar">
+      <div class="col">
+        <h2>Series </h2>
+        <form style="margin:5px;">
+          <div class="form-row">
+            <div class="col">
+              <input type="text" class="form-control" id="search-box" placeholder="Filtrar por nombre">
             </div>
-        </div>
+            <div class="col">
+              <button type="button" id="button-filterByName" class="btn btn-success">Aplicar</button>
+            </div>
+          </div>
+        </form>
+        <table id="seriesTable" class="table table-bordered">
+          <table class="table-active">
+              <tr>
+                <th>#</th>
+                <th>Nombre</th>
+                <th>Plataforma</th>
+                <th>Temporadas</th>
+              </tr> 
+            <tfoot>
+              <tr>
+                <td colspan="4">Temporadas promedio: 6</td>
+              </tr>
+              </thead>
+              <tbody id="series">
+              </tbody>
+            </table>
+            <div class="col-md-6">
+                <div class="card" style="width: 18rem;">
+                    <img id="serie-imagen" class="card-img-top" src="" alt="Serie Imagen">
+                    <div class="card-body">
+                        <h5 id='serie-nombre' class="card-title"></h5>
+                        <p id='serie-descripcion' class="card-text"></p>
+                        <a id='serie-link' href="#" target="_blank">Ver serie</a>
+                    </div>
+                </div>
+            </div>
+      </div>
     </div>
-    <script type="module" src="./scripts/serie.js" ></script>
-    <script type="module" src="./scripts/dataSeries.js" ></script>
-    <script type="module" src="./scripts/main.js"></script>
+  </div>
+  <script type="module" src="./scripts/serie.js"></script>
+  <script type="module" src="./scripts/dataSeries.js"></script>
+  <script type="module" src="./scripts/main.js"></script>
 </body>
+
 </html>
